# LangChain-Projects

New_project/: main.py
Project-1/: main.py  prompt.py  pyproject.toml  schemas.py
React-Langchain/: example.py  main.py  pyproject.toml
medical-rag-service/: .gitignore  README.md  main.py  pyproject.toml
medical-rag-service/api/: main.py
medical-rag-service/src/chunking/: chunker.py  recursive_chunking.py  semantic.py
medical-rag-service/src/document/: extractor.py
medical-rag-service/src/embedding/: openai_embeddings.py
medical-rag-service/src/etl_pipeline/: chunker.py  embedder.py  loader.py  pipeline.py  reranker.py
medical-rag-service/src/extractor/: document_extractor.py  extractor.py
medical-rag-service/src/generation/: openai_llm.py  prompts.py
medical-rag-service/src/rag/: pipeline.py
medical-rag-service/src/retrieval/: chroma_db.py
medical-rag-service/src/utils/: aws_client.py
medical-rag-service/ui/: gradio_app.py
