[project]
name = "react-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "langchain>=1.1.3",
    "langchain-classic>=1.0.0",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "python-dotenv>=1.2.1",
]
