[project]
name = "medical-rag-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Abigael Nyakara",email = "abbynyakara@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.4,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "chromadb (>=1.3.7,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "medical_rag_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
