[project]
name = "medical-rag-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "chromadb>=1.3.7",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.5",
    "langchain-text-splitters>=1.1.0",
    "numpy<2",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pdfminer-six<20221105",
    "pi-heif>=1.1.1",
    "pillow>=12.0.0",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "sentence-transformers>=5.2.0",
    "torch==2.2.2",
    "unstructured>=0.13.0",
    "unstructured-inference>=1.1.1",
]
